# retail_demand_analysis

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg
app/: README.md  __init__.py  app.py  bootstrap.py
app/assets/css/: style.css
app/components/: __init__.py  batch_forecast.py  executive_dashboard.py  feature_forecast_builder.py  model_selector.py  performance_tracker.py
app/pages/: __init__.py  forecast.py
app/ui/: __init__.py  forecast_engine.py  forecast_ui.py
app/utils/: __init__.py  helpers.py  visualizer.py
config/: arima_config.yaml  ets_config.yaml  gdrive_file_ids.yaml  ml_models_config.yaml  model_config.yaml  prophet_config.yaml  sarima_config.yaml
notebooks/week_1/: eda.ipynb  eda_processing.ipynb  feature_engineering.ipynb  pre_processing.ipynb
notebooks/week_2/: arima.ipynb  prophet.ipynb  sarima.ipynb  time_series_models_comparison.ipynb
notebooks/week_3/lstm/: best_model.keras
notebooks/week_3/ml/: random_forest.ipynb  svr.ipynb
reports/docs/: final_report.md
reports/week_models/week_3/lstm/: lstm_multivariate_model.keras  lstm_univariate_model.keras
src/: README.md  __init__.py
src/core/: __init__.py
src/core/week_1/: README.md  __init__.py  main_week1.py
src/core/week_1/loader/: __init__.py  google_drive_loader.py  kaggle_loader.py  loader.py  train_subset_processor.py  visualizer.py
src/core/week_1/processor/: __init__.py
src/core/week_1/processor/eda/: __init__.py  eda_report_generator.py  retail_data_cleaner.py  time_series_diagnostics.py  visualization.py
src/core/week_1/processor/features/: __init__.py  data_preparation_pipeline.py  feature_engineering.py  feature_viz.py  impact_analysis.py
src/core/week_2/: README.md  __init__.py
src/core/week_2/preparing/: __init__.py  preparing_data.py  ts_viz.py
src/core/week_3/: README.md  __init__.py
src/core/week_3/preparing/: __init__.py  data_preparer.py  ml_config.py  model_visualizer.py
src/utils/: __init__.py  notebook_setup.py  results_manager.py  utils.py
