[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "retail_demand_analysis"
version = "0.1.0"
description = "End-to-end demand forecasting solution for the Favorita dataset, including EDA, feature engineering, machine learning models, and stakeholder-ready reporting."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

authors = [
    { name = "Guy Kaptue", email = "guykaptue24@gmail.com" }
]

keywords = [
    "demand forecasting",
    "time series",
    "machine learning",
    "retail analytics",
    "data science",
    "favorita"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Business Analysts",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

dependencies = [
    # Core
    "pandas>=2.0.0",
    "numpy>=1.24.0",

    # Data loading
    "kaggle>=1.6.0",
    "gdown>=4.7.0",
    "dask[dataframe]>=2023.5.0",
    "pyarrow>=12.0.0",

    # ML / Time Series
    "scikit-learn>=1.3.0",
    "xgboost>=1.7.0",
    "statsmodels>=0.14.0",
    "statsforecast>=1.5.0",
    "pmdarima>=2.0.4",
    "darts>=0.27.0",
    "prophet>=1.1.5",
    "pyyaml>=6.0.0",
    "mlflow>=2.0.0",
    "hyperopt>=0.2.7",

    # Deep Learning (Apple Silicon GPU acceleration)
    "tensorflow",

    # Notebook
    "jupyter>=1.0.0",
    "ipython>=8.12.0",
    "ipywidgets>=8.0.0",
    "jupyterlab>=4.0.0",

    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
    "kaleido>=0.2.1",
    "imageio>=2.31.0",
    "bokeh>=3.2.0",
    "altair>=5.0.0",

    # Streamlit App
    "streamlit>=1.32.0"
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "isort",
    "pytest",
    "coverage"
]

docs = [
    "sphinx",
    "sphinx-rtd-theme"
]

[project.urls]
Homepage = "https://github.com/GuyKaptue/retail_demand_analysis"
Repository = "https://github.com/GuyKaptue/retail_demand_analysis"
Issues = "https://github.com/GuyKaptue/retail_demand_analysis/issues"
