[metadata]
name = retail_demand_analysis
version = 0.1.0
author = Guy Kaptue
author_email = guykaptue24@gmail.com
description = End-to-end demand forecasting solution for Favorita dataset
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GuyKaptue/retail_demand_analysis
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.9
install_requires =
    pandas
    numpy
    scikit-learn
    xgboost
    matplotlib
    seaborn
    plotly
    kaleido
    imageio
    bokeh
    altair
    kaggle
    gdown
    jupyter
    ipython
    ipywidgets
    jupyterlab

[options.packages.find]
where = src
